# gptmessenger

./: .gitignore  CMakeLists.txt  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
include/: messenger.hpp  models.hpp  server.hpp  storage.hpp  ui.hpp
server/: db.example.json  index.js
server/uploads/: 44de5e17-0941-4cf1-a73c-a709476c5e8d.conf  7b210fbd-ff88-4c6a-a6ca-266eda2a895e.tsx  7b471615-3503-4a6e-9146-c272253310b0.tsx  7e498bf1-a4f9-4911-815a-380079b4c585.tsx  e50aad29-8933-4dc5-9c85-c04fd0a8064a.tsx
src/: .env  main.cpp  main.tsx  messenger.cpp  polyfills.ts  server.cpp  server_main.cpp  storage.cpp  styles.css  types.ts  ui.cpp  win_gui_main.cpp
src/components/: AddMemberModal.tsx  AutoSizeTextarea.tsx  Avatar.tsx  CallOverlay.tsx  GroupAvatarSelector.tsx  Header.tsx  IncomingCallModal.tsx  InteractiveBackground.tsx  Sidebar.tsx  Slider.tsx
src/lib/: api.ts
src/pages/: AddFriendPage.tsx  AuthLoginPage.tsx  AuthRegisterPage.tsx  ChatPage.tsx  CreateGroupPage.tsx  FriendProfilePage.tsx  GroupProfilePage.tsx  PlusPage.tsx  SettingsPage.tsx  WelcomePage.tsx
src/services/: socket.ts  webrtc.ts
